--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                         <a class="nav-link active" aria-current="page" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#servicos">Serviços</a>
+                        <a class="nav-link" href="pages/serviços.html">Serviços</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#unidades">Unidades</a>
+                        <a class="nav-link" href="pages/unidades.html">Unidades</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#trabalhe">Trabalhe Conosco</a>
@@ -56,48 +56,48 @@
     <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="src/assets/img/img01.jpg" class="d-block w-100 img-fluid" style="height: 40dvi; object-fit: cover;" alt="Imagem 1">
+                <img src="src/assets/img/img01.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 1">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5 style="font-size: 2em; background-color: rgba(0, 0, 128, 0.2);">Cuidado Profissional</h5>
-                    <p style="font-size: 2em; background-color: rgba(0, 0, 128, 0.2);">Atendimento humanizado para idosos e enfermos.</p>
+                    <h5 class="carousel-title">Cuidado Profissional</h5> <br>
+                    <p class="carousel-text">Atendimento humanizado para idosos e enfermos.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="src/assets/img/img02.jpg" class="d-block w-100 img-fluid" style="height: 40dvi; object-fit: cover;" alt="Imagem 2">
+                <img src="src/assets/img/img02.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 2">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5 style="font-size: 2em; background-color: rgba(0, 0, 128, 0.2);">Monitoramento de Saúde</h5>
-                    <p style="font-size: 2em; background-color: rgba(0, 0, 128, 0.2);">Acompanhamento especializado para maior segurança.</p>
+                    <h5 class="carousel-title">Monitoramento de Saúde</h5> <br>
+                    <p class="carousel-text">Acompanhamento especializado para garantir a segurança e o bem-estar dos nossos clientes.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="src/assets/img/img03.jpg" class="d-block w-100 img-fluid" style="height: 40dvi; object-fit: cover;" alt="Imagem 3">
+                <img src="src/assets/img/img03.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 3">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5 style="font-size: 2em; background-color: rgba(0, 0, 128, 0.2);">Companhia e Suporte</h5>
-                    <p style="font-size: 2em; background-color: rgba(0, 0, 128, 0.2);">Mais qualidade de vida com atenção e carinho.</p>
+                    <h5 class="carousel-title">Companhia e Suporte</h5> <br>
+                    <p class="carousel-text">Proporcionamos momentos de qualidade e atenção, promovendo uma vida mais plena.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="src/assets/img/img04.jpg" class="d-block w-100 img-fluid" style="height: 40dvi; object-fit: cover;" alt="Imagem 3">
+                <img src="src/assets/img/img04.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 4">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5 style="font-size: 2em; background-color: rgba(0, 0, 128, 0.2);">Companhia e Suporte</h5>
-                    <p style="font-size: 2em; background-color: rgba(0, 0, 128, 0.2);">Mais qualidade de vida com atenção e carinho.</p>
+                    <h5 class="carousel-title">Apoio Emocional</h5> <br>
+                    <p class="carousel-text">Oferecemos suporte emocional e companhia, ajudando a combater a solidão.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="src/assets/img/img05.jpg" class="d-block w-100 img-fluid" style="height: 40dvi; object-fit: cover;" alt="Imagem 3">
+                <img src="src/assets/img/img05.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 5">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5 style="font-size: 2em; background-color: rgba(0, 0, 128, 0.2);">Companhia e Suporte</h5>
-                    <p style="font-size: 2em; background-color: rgba(0, 0, 128, 0.2);">Mais qualidade de vida com atenção e carinho.</p>
+                    <h5 class="carousel-title">Atividades Recreativas</h5> <br>
+                    <p class="carousel-text">Promovemos atividades que estimulam a mente e o corpo, garantindo bem-estar.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="src/assets/img/img06.jpg" class="d-block w-100 img-fluid" style="height: 40dvi; object-fit: cover;" alt="Imagem 3">
+                <img src="src/assets/img/img06.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 6">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5 style="font-size: 2em; background-color: rgba(0, 0, 128, 0.2);">Companhia e Suporte</h5>
-                    <p style="font-size: 2em; background-color: rgba(0, 0, 128, 0.2);">Mais qualidade de vida com atenção e carinho.</p>
+                    <h5 class="carousel-title">Cuidado Personalizado</h5> <br>
+                    <p class="carousel-text">Nossos cuidadores oferecem um atendimento adaptado às necessidades de cada cliente.</p>
                 </div>
             </div>
-        </div>
+        
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Anterior</span>
@@ -193,7 +193,7 @@
 
     <!-- Rodapé -->
     <footer class="bg-dark text-white text-center py-4">
-        <div class="container">
+        <div class="container-fluid">
             <p>&copy; 2025 Cuida Legal - Todos os direitos reservados</p>
             <div class="social-icons">
                 <a href="https://facebook.com" class="social-icon" target="_blank"><i class="fab fa-facebook-f"></i></a>
