--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="src/assets/img/cuidalegal-logo-removebg-preview.png">
-                <img src="src/assets/img/cuidalegal-logo.webp" width="200px" alt="Logo Cuida Legal" class="logo-placeholder">
+                <img src="src/assets/img/cuidalegal-logo.webp" width="200px" alt="Logo Cuida Legal"
+                    class="logo-placeholder">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,63 +52,71 @@
             </div>
         </div>
     </nav>
-    
-    <div class="container-fluid" style="width: 85dvi;" >
-    <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="src/assets/img/img01.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 1">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5 class="carousel-title">Cuidado Profissional</h5> <br>
-                    <p class="carousel-text">Atendimento humanizado para idosos e enfermos.</p>
+
+    <div class="container-fluid" style="width: 85dvi;">
+        <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="src/assets/img/img01.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 1">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5 class="carousel-title">Cuidado Profissional</h5> <br>
+                        <p class="carousel-text">Atendimento humanizado para idosos e enfermos.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="carousel-item">
-                <img src="src/assets/img/img02.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 2">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5 class="carousel-title">Monitoramento de Saúde</h5> <br>
-                    <p class="carousel-text">Acompanhamento especializado para garantir a segurança e o bem-estar dos nossos clientes.</p>
+                <div class="carousel-item">
+                    <img src="src/assets/img/img02.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 2">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5 class="carousel-title">Monitoramento de Saúde</h5> <br>
+                        <p class="carousel-text">Acompanhamento especializado para garantir a segurança e o bem-estar
+                            dos nossos clientes.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="carousel-item">
-                <img src="src/assets/img/img03.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 3">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5 class="carousel-title">Companhia e Suporte</h5> <br>
-                    <p class="carousel-text">Proporcionamos momentos de qualidade e atenção, promovendo uma vida mais plena.</p>
+                <div class="carousel-item">
+                    <img src="src/assets/img/img03.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 3">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5 class="carousel-title">Companhia e Suporte</h5> <br>
+                        <p class="carousel-text">Proporcionamos momentos de qualidade e atenção, promovendo uma vida
+                            mais plena.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="carousel-item">
-                <img src="src/assets/img/img04.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 4">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5 class="carousel-title">Apoio Emocional</h5> <br>
-                    <p class="carousel-text">Oferecemos suporte emocional e companhia, ajudando a combater a solidão.</p>
+                <div class="carousel-item">
+                    <img src="src/assets/img/img04.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 4">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5 class="carousel-title">Apoio Emocional</h5> <br>
+                        <p class="carousel-text">Oferecemos suporte emocional e companhia, ajudando a combater a
+                            solidão.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="carousel-item">
-                <img src="src/assets/img/img05.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 5">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5 class="carousel-title">Atividades Recreativas</h5> <br>
-                    <p class="carousel-text">Promovemos atividades que estimulam a mente e o corpo, garantindo bem-estar.</p>
+                <div class="carousel-item">
+                    <img src="src/assets/img/img05.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 5">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5 class="carousel-title">Atividades Recreativas</h5> <br>
+                        <p class="carousel-text">Promovemos atividades que estimulam a mente e o corpo, garantindo
+                            bem-estar.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="carousel-item">
-                <img src="src/assets/img/img06.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 6">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5 class="carousel-title">Cuidado Personalizado</h5> <br>
-                    <p class="carousel-text">Nossos cuidadores oferecem um atendimento adaptado às necessidades de cada cliente.</p>
+                <div class="carousel-item">
+                    <img src="src/assets/img/img06.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 6">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5 class="carousel-title">Cuidado Personalizado</h5> <br>
+                        <p class="carousel-text">Nossos cuidadores oferecem um atendimento adaptado às necessidades de
+                            cada cliente.</p>
+                    </div>
                 </div>
+
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Anterior</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Próximo</span>
+                </button>
             </div>
-        
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Anterior</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Próximo</span>
-        </button>
+        </div>
     </div>
-</div>
 
     <!-- Quem Somos -->
     <section id="sobre" class="container py-5">
@@ -186,6 +195,8 @@
         </div>
     </section>
 
+
+
     <!-- Whatsapp Icon -->
     <a href="https://wa.me/5513996619491" class="whatsapp-float" target="_blank">
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
@@ -204,6 +215,7 @@
             </div>
         </div>
     </footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
