--- a/pages/unidades.html
+++ b/pages/unidades.html
@@ -31,13 +31,13 @@
                         <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#servicos">Serviços</a>
+                        <a class="nav-link" href="serviços.html">Serviços</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#unidades">Unidades</a>
+                        <a class="nav-link" href="unidades.html">Unidades</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#trabalhe">Trabalhe Conosco</a>
+                        <a class="nav-link" href="parceiro.html">Trabalhe Conosco</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contato">Entre em Contato</a>
