--- a/index.html
+++ b/index.html
@@ -53,70 +53,81 @@
         </div>
     </nav>
 
-    <div class="container-fluid" style="width: 85dvi;">
-        <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="src/assets/img/img01.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 1">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5 class="carousel-title">Cuidado Profissional</h5> <br>
-                        <p class="carousel-text">Atendimento humanizado para idosos e enfermos.</p>
+    <div class="d-none d-md-block">
+        <div class="container-fluid" style="width: 85dvi;">
+            <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="src/assets/img/img01.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 1">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5 class="carousel-title">Cuidado Profissional</h5> <br>
+                            <p class="carousel-text">Atendimento humanizado para idosos e enfermos.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="src/assets/img/img02.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 2">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5 class="carousel-title">Monitoramento de Saúde</h5> <br>
-                        <p class="carousel-text">Acompanhamento especializado para garantir a segurança e o bem-estar
-                            dos nossos clientes.</p>
+                    <div class="carousel-item">
+                        <img src="src/assets/img/img02.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 2">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5 class="carousel-title">Monitoramento de Saúde</h5> <br>
+                            <p class="carousel-text">Acompanhamento especializado para garantir a segurança e o bem-estar
+                                dos nossos clientes.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="src/assets/img/img03.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 3">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5 class="carousel-title">Companhia e Suporte</h5> <br>
-                        <p class="carousel-text">Proporcionamos momentos de qualidade e atenção, promovendo uma vida
-                            mais plena.</p>
+                    <div class="carousel-item">
+                        <img src="src/assets/img/img03.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 3">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5 class="carousel-title">Companhia e Suporte</h5> <br>
+                            <p class="carousel-text">Proporcionamos momentos de qualidade e atenção, promovendo uma vida
+                                mais plena.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="src/assets/img/img04.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 4">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5 class="carousel-title">Apoio Emocional</h5> <br>
-                        <p class="carousel-text">Oferecemos suporte emocional e companhia, ajudando a combater a
-                            solidão.</p>
+                    <div class="carousel-item">
+                        <img src="src/assets/img/img04.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 4">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5 class="carousel-title">Apoio Emocional</h5> <br>
+                            <p class="carousel-text">Oferecemos suporte emocional e companhia, ajudando a combater a
+                                solidão.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="src/assets/img/img05.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 5">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5 class="carousel-title">Atividades Recreativas</h5> <br>
-                        <p class="carousel-text">Promovemos atividades que estimulam a mente e o corpo, garantindo
-                            bem-estar.</p>
+                    <div class="carousel-item">
+                        <img src="src/assets/img/img05.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 5">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5 class="carousel-title">Atividades Recreativas</h5> <br>
+                            <p class="carousel-text">Promovemos atividades que estimulam a mente e o corpo, garantindo
+                                bem-estar.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="src/assets/img/img06.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 6">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5 class="carousel-title">Cuidado Personalizado</h5> <br>
-                        <p class="carousel-text">Nossos cuidadores oferecem um atendimento adaptado às necessidades de
-                            cada cliente.</p>
+                    <div class="carousel-item">
+                        <img src="src/assets/img/img06.jpg" class="d-block w-100 img-fluid carousel-img" alt="Imagem 6">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5 class="carousel-title">Cuidado Personalizado</h5> <br>
+                            <p class="carousel-text">Nossos cuidadores oferecem um atendimento adaptado às necessidades de
+                                cada cliente.</p>
+                        </div>
                     </div>
-                </div>
 
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Anterior</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Próximo</span>
-                </button>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Anterior</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Próximo</span>
+                    </button>
+                </div>
             </div>
         </div>
     </div>
+<br>
+    <!-- Hero -->
+<section class="hero" style="background-color: #1A237E; color: white; padding: 60px 0; text-align: center;">
+    <div class="container">
+        <h1 class="display-4">Bem-vindo à Cuida Legal</h1>
+        <p class="lead">Cuidamos de quem você ama com carinho e profissionalismo.</p>
+        <a href="#servicos" class="btn btn-light btn-lg">Conheça Nossos Serviços</a>
+    </div>
+</section>
 
     <!-- Quem Somos -->
     <section id="sobre" class="container py-5">
